...
    if (installations !== undefined) {
      messageToLog += ` (${installations} inst)`;
    }
    messageToLog += ` → `;

    if (conversationStreamTimeMs !== undefined) {
      messageToLog += `New Group: ${conversationStreamTimeMs.toFixed(2)} ms; `;
    }
    if (addMembersTimeMs !== undefined) {
      messageToLog += `Add Members: ${addMembersTimeMs.toFixed(2)} ms; `;
    }
    if (groupUpdatedStreamTimeMs !== undefined) {
      messageToLog += `Metadata: ${groupUpdatedStreamTimeMs.toFixed(2)} ms; `;
    }
    if (messageStreamTimeMs !== undefined) {
      messageToLog += `Messages: ${messageStreamTimeMs.toFixed(2)} ms; `;
...
